--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.26.9",
     "@ckeditor/ckeditor5-build-classic": "^35.4.0",
     "@ckeditor/ckeditor5-react": "^5.0.5",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
@@ -13,6 +14,8 @@
     "@fullcalendar/daygrid": "^5.11.2",
     "@fullcalendar/interaction": "^5.11.2",
     "@fullcalendar/react": "^5.11.2",
+    "@popperjs/core": "^2.11.8",
+    "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
@@ -24,7 +27,7 @@
     "babel-eslint": "^10.1.0",
     "bootstrap": "^5.2.3",
     "chart.js": "^2.9.4",
-    "chartist": "^0.11.4",
+    "chartist": "^1.3.0",
     "classnames": "^2.3.2",
     "draft-js": "^0.11.7",
     "echarts": "^4.9.0",
@@ -35,6 +38,7 @@
     "google-maps-react": "^2.0.6",
     "i18next": "^22.4.6",
     "i18next-browser-languagedetector": "^6.1.4",
+    "immutable": "^5.0.3",
     "leaflet": "^1.9.3",
     "lodash": "^4.17.21",
     "lodash.clonedeep": "^4.5.0",
@@ -42,7 +46,9 @@
     "metismenujs": "^1.3.1",
     "moment": "^2.29.4",
     "namor": "^2.0.4",
+    "nouislider": "^15.8.1",
     "nouislider-react": "^3.4.1",
+    "postcss": "^8.1.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
